<resources>
    <string name="app_name">MyTown</string>
    <string name="action_settings">Settings</string>
    <string name="first_page">首页</string>
    <string name="shops">商家</string>
    <string name="realtime_monitor">实时</string>
    <string name="my">我的</string>
    <string name="search">搜索</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="hotsearch">热门搜索</string>
    <string name="historyrecord">历史记录</string>
    <string name="clearhistory">清空历史</string>
    <string name="hello_world">hello world</string>
</resources>
