<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cn.ifingers.mytown.view.CustomSearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/search_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hotsearch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotsearch"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/activity_bar_text_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deeporange"/>

            <cn.ifingers.mytown.view.FlowLayout
                android:id="@+id/view_hot_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/lishijilv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historyrecord"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/activity_bar_text_size"/>

                <TextView
                    android:id="@+id/qingkong_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clearhistory"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/activity_bar_text_size"
                    android:textColor="@drawable/bar_text_bg"/>

            </RelativeLayout>



            <View
                android:id="@+id/home_center_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deeporange"/>

            <ListView
                android:id="@+id/history_all_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"></ListView>

        </LinearLayout>

        <ListView
            android:id="@+id/outer_history_search_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:background="@color/white"></ListView>

    </FrameLayout>



</LinearLayout>